@@ -1,3 +1,8 @@
+2013-08-24  Tobias Burnus  <burnus@net-b.de>
+
+	PR fortran/44646
+	* gfortran.dg/vect/vect-do-concurrent-1.f90: New.
+
 2013-10-24  Dehao Chen  <dehao@google.com>
 
 	* g++.dg/opt/devirt3.C: New test.
